--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -418,7 +418,7 @@
                     <div class="previous">Previous</div>
                     <!-- <div class="previous" *ngIf="btnAllCount > 5"> ... </div> -->
                     <div *ngFor="let item of numArr(btnCount); let i = index;" (click)="onClickPageNo(5,i)"
-                      id="number_{{i}}" class="numbers active">{{i+1}}
+                      id="number_{{i}}" [ngClass]="{'active': i === 0}" class="numbers">{{i+1}}
                       <!-- <div *ngif="">{{i+1}}</div> -->
                     </div>
                     <div class="next" *ngIf="btnAllCount > 5"> ... </div>
