Left nav updates

--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -49,14 +49,14 @@
 		</button> -->
 
 		<div class="sub-title marginTop15">Configurations</div>
-			<div mat-button class="mat-button" [routerLink]="['/ml-threshold']" skipLocationChange routerLinkActive="active" (click)="preview('ml')" mat-button>			
+			<div mat-button class="mat-button"  mat-button>			
 				<span class="inlineIconBox">	
 					<img src="assets/icons/sidemenu/new-icons/index.svg" class="defaultIcon">	
 					<img src="assets/icons/sidemenu/new-icons/index-active.svg" class="activeIcon">			
 				</span>
 				<span class="linkTitle">Index</span>
 			</div>
-			<div mat-button class="mat-button" [routerLink]="['/traits']" skipLocationChange routerLinkActive="active" (click)="preview('traits')" mat-button>			
+			<div mat-button class="mat-button" mat-button>			
 				<span class="inlineIconBox">	
 					<img src="assets/icons/sidemenu/new-icons/query.svg" class="defaultIcon">	
 					<img src="assets/icons/sidemenu/new-icons/query-active.svg" class="activeIcon">			
