menu spelling mistakes corrections

--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -97,7 +97,7 @@
 				<img src="assets/icons/sidemenu/new-icons/attributes.svg" class="defaultIcon">	
 				<img src="assets/icons/sidemenu/new-icons/attributes-active.svg" class="activeIcon">				
 			</span>
-			<span class="linkTitle">Attributs & Factes</span>
+			<span class="linkTitle">Attributes & Facets</span>
 		</div>
 		<div mat-button class="mat-button">
 			<span class="inlineIconBox">
@@ -111,7 +111,7 @@
 				<img src="assets/icons/sidemenu/new-icons/general-settings.svg" class="defaultIcon">	
 				<img src="assets/icons/sidemenu/new-icons/general-settings-active.svg" class="activeIcon">				
 			</span>
-			<span class="linkTitle">General Settins</span>
+			<span class="linkTitle">General Settings</span>
 		</div>
 
 		<!-- <div mat-button class="mat-button settings-menu">
