--- a/findly-builder/src/app/components/bot-action/bot-action.component.html
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.html
@@ -5,8 +5,9 @@
     </div>
     <div class="noTraits" *ngIf="!(bots && bots.length) && !loadingContent">
       <img src="assets/images/empty-illustration.png">
-      <div class='noTraitsInfo'><span class='infoHeader'> No Bots created yet!</span>
-        <p class='infoP'> Looks like there are no Bots created'<br>
+       <div class='noTraitsInfo'>
+         <!--<span class='infoHeader'></span> -->
+        <p class='infoP'>No actions available<br>
             <!-- Create and manage bot traits -->
         </p>
         <!-- <button class='kr-sg-button-primary'>{{'Create New'}}</button> -->
