Left menu and header menu changes

--- a/findly-builder/src/app/components/app-header/app-header.component.html
+++ b/findly-builder/src/app/components/app-header/app-header.component.html
@@ -10,7 +10,8 @@
                     <div class="headerMenuTab" [routerLink]="['/summary']" skipLocationChange routerLinkActive="active">Summary</div>
                     <div class="headerMenuTab">Indices</div>
                     <div class="headerMenuTab">Analytics</div>
-                    <div class="headerMenuTab">Settings</div>
+                    <div class="headerMenuTab">Experments</div>
+                    <div class="headerMenuTab">Settings <span class="statusIndicator"></span></div>
                 </div>
             </div>
             <ul class="navbar-nav nav-flex-icons align-items-center right-menu-content flex-row justify-content-end"> 
