Enabled demo link in left menu

--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -99,7 +99,7 @@
 			</span>
 			<span class="linkTitle">Fields & Facets</span>
 		</div>
-		<div mat-button class="mat-button d-none">
+		<div mat-button class="mat-button">
 			<span class="inlineIconBox">
 				<img src="assets/icons/sidemenu/new-icons/demo.svg" class="defaultIcon">	
 				<img src="assets/icons/sidemenu/new-icons/demo-active.svg" class="activeIcon">				
