--- a/findly-builder/src/assets/web-kore-sdk/demo/kore-widgets.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/kore-widgets.css
@@ -8552,13 +8552,22 @@ ngb-accordion .card-header {
 }
 
 .divfeedback{
-    margin-bottom: 25px;    
+    /* margin-bottom: 25px;     */
 }
 .divfeedback .yesLike{
     margin-right: 26px;
 }
 .divfeedback img{
     cursor: pointer;
+}
+.divfeedback .yesLike img{
+    width: 25px;
+    height: 25px;
+}   
+
+.divfeedback .noDislike img{
+    width: 17px;
+    height: 19px;
 }
 /* .feedbackDiv{
     border-bottom: 1px solid #e5e8ec;
@@ -9282,7 +9291,7 @@ body::-webkit-scrollbar {
   .matched-faq-containers .faqs-shadow .faqs-wrp-content .title {
     font-weight: 600;
     font-size: 14px;
-    margin-bottom: 8px;
+    margin-bottom: 0px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -9299,6 +9308,7 @@ body::-webkit-scrollbar {
   }
   .matched-faq-containers .faqs-shadow .faqs-wrp-content .title .panel{
     padding: 0px;
+    white-space: normal;
   }
   .matched-faq-containers .faqs-shadow .faqs-wrp-content .title .panel  .content-inner{
     color: #161928;
@@ -9314,6 +9324,23 @@ body::-webkit-scrollbar {
     text-overflow: ellipsis;
     max-width: 100%;
     height: 17px;
+    display: block;
+    margin-top: 5px;
+  }
+  .matched-faq-containers .faqs-shadow .faqs-wrp-content .desc-info {
+    font-weight: normal;
+    font-size: 12px;
+    color: #979797;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 100%;
+    height: 17px;
+    display: block;
+    margin-top: 5px;
+  }
+  .faqs-wrp-content .accordion.acc-active .desc-info{
+      display: none;
   }
   /* .matched-faq-containers .faqs-shadow .faqs-bottom-actions {
     padding: 8px 0px 8px 0px;
@@ -9359,21 +9386,26 @@ body::-webkit-scrollbar {
   .matched-pages-container .faqs-shadow .faqs-wrp-content {
     padding: 20px 20px;
     display: table;
+    width: 100%;
   }
   .matched-pages-container .faqs-shadow .faqs-wrp-content .image-url-sec {
-    display: inline-block;
+    display: table-cell;
+    width: 123px;
+    vertical-align: top;
+    text-align: center;
+    padding: 0;
+    padding-right: 23px;
     height: 68px;
-    width: 100px;
-    float: left;
   }
   .matched-pages-container .faqs-shadow .faqs-wrp-content .image-url-sec img {
     width: 100%;
     height: 100%;
   }
   .matched-pages-container .faqs-shadow .faqs-wrp-content .pages-content {
-    display: inline-block;
-    width: 75%;
-    padding-left: 23px;
+    display: table-cell;
+    width: 100%;
+    padding-left: 0;
+    vertical-align: middle;
     position: relative;
     top: -2px;
     float: left;
@@ -9389,8 +9421,7 @@ body::-webkit-scrollbar {
     white-space: normal;
     text-overflow: ellipsis;
     max-width: 100%;
-    height: 17px;
-    line-height: 20px;
+    line-height: 19px;
   }
   
   .show-in-findly{
@@ -9517,4 +9548,12 @@ body::-webkit-scrollbar {
 }
 .pl-0{
     padding-left: 0 !important;
+}
+
+
+#contextjsonfield{
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    width: 200px;
 }
